--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,15 @@
 <ol class="post-list">
+    {{#each posts}}
   <li>
     <article class="post">
       <div class="title">
-        <a href="{{post_url}}" target="_blank">{{title}}</a>
-        <span>({{post_url}})</span>
+        <h2>{{title}}</h2>
+        
       </div>
       <div class="meta">
-        {{vote_count}} point(s) by {{user.username}} on
-        {{created_at}}
-        |
-        <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
+        {{post_text}}
       </div>
     </article>
   </li>
+  {{/each}}
 </ol>
