--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
     <header>
         <a href="/">Home</a>
         <a href="/">Dashboard</a>
-        <a href="/">Login</a>
+        <a href="/login">Login</a>
         <a href="/">Logout</a>
         <h1>Tech Blog</h1>
     </header>
