--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
         <a href="/">Home</a>
         <a href="/">Dashboard</a>
         <a href="/login">Login</a>
-        <a href="/">Logout</a>
+        <button id ='logout' class ="button">logout</button>
         <h1>Tech Blog</h1>
     </header>
     <main>
@@ -24,7 +24,7 @@
       Thanks for visiting!
     </footer>
   </div>
-
+<script src="/javascript/logout.js"></script>
 </body>
 
 </html>
