--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,11 @@
 <form class="login-form">
   <div>
-    <label for="email-login">email:</label>
+    <label for="username-login">username:</label>
     <input type="text" id="email-login" />
+  </div>
+   <div>
+    <label for="email-signup">email:</label>
+    <input type="text" id="email-signup" />
   </div>
   <div>
     <label for="password-login">password:</label>
